resolve the relativeOriginalFileName with the help of tsp-location content